syntax = "proto3";

package com.github.sguzman.ebook.graph.protoc;

message Link {
    string link = 1;
}

message Size {
    float size = 1;
    enum Types {
        Kb = 0;
        Mb = 1;
        Gb = 2;
    }
    Types type = 2;
}

message Details {
    string authors = 1;
    string pubDate = 2;
    string isbn10 = 3;
    string isbn13 = 4;
    string publisher = 5;
    uint32 pages = 6;
    string format = 7;
    Size size = 8;
}

message Ebook {
    string title = 1;
    string date = 2;
    string img = 3;
    bytes desc = 4;
    uint32 id = 5;
    Details detail = 6;
    repeated string categories = 7;
    repeated Link links = 8;
    Link prev = 9;
    Link next = 10;
}

message PageDimension {
    float height = 1;
    float width = 2;
    enum Units {
        PTS = 0;
        PX = 1;
        INCH = 2;
    }
    Units units = 3;
}

message Hosting {
    string fileType = 1;
    string title = 2;
    string author = 3;
    string creator = 4;
    string producer = 5;
    string creationDate = 6;
    string modDate = 7;
    uint32 pages = 8;
    bool encrypted = 9;
    PageDimension dim = 10;
    uint32 size = 11;
    string md5 = 12;
}

message ItemStore {
    repeated Link links = 1;
    map<string, Ebook> books = 2;
    map<string, Link> host = 3;
    map<string, Hosting> rapidHost = 4;
}